trying to reproduce and fix the temp deletion error
(cherry picked from commit b752447f0a32cf5d5280ac0a16f58bf9a78606a6)